PA_Education/TestMenifest/force-app/main/default/objects/QuoteItem__c/QuoteItem__c.object-meta.xml
<CustomObject>
    <description>견적을 구성하는 Consulting 자원 또는 License 목록</description>
    <label>견적 상세</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>No</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>