PA_Education/TestMenifest/force-app/main/default/objects/QuoteItem__c/fields/QuoteItem_Amount__c.field-meta.xml
<CustomField>
    <fullName>QuoteItem_Amount__c</fullName>
    <formula>QuoteItem_LicenseAmount__c + QuoteItem_ConsultAmount__c + QuoteItem_TrainingSalesAmount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>총금액</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>