PA_Education/TestMenifest/force-app/main/default/objects/QuoteItem__c/fields/QuoteItem_ConsultAmount__c.field-meta.xml
<CustomField>
    <fullName>QuoteItem_ConsultAmount__c</fullName>
    <formula>IF( QuoteItem_FOC__c ,0, 
IF(QuoteItem_ConsultDiscountedPrice__c == 0 , QuoteItem_ConsultListPrice__c,QuoteItem_ConsultDiscountedPrice__c) * QuoteItem_ConsultManMonths__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>할인후 금액</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>