PA_Education/TestMenifest/force-app/main/default/objects/QuoteItem__c/fields/QuoteItem_ConsultDiscountAmount__c.field-meta.xml
<CustomField>
    <fullName>QuoteItem_ConsultDiscountAmount__c</fullName>
    <formula>QuoteItem_ConsultListAmount__c - QuoteItem_ConsultAmount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>할인액</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>