PA_Education/TestMenifest/force-app/main/default/objects/QuoteItem__c/fields/QuoteItem_ConsultDiscountedPrice__c.field-meta.xml
<CustomField>
    <fullName>QuoteItem_ConsultDiscountedPrice__c</fullName>
    <label>할인 후 단가</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>