PA_Education/TestMenifest/force-app/main/default/objects/QuoteItem__c/fields/QuoteItem_ConsultLevel__c.field-meta.xml
<CustomField>
    <fullName>QuoteItem_ConsultLevel__c</fullName>
    <description>투입인력의 등급을 견적서에 표기를 원할 경우를 대비한 항목</description>
    <inlineHelpText>견적서에 투입인력 등급 표기 요청을 받은 경우 선택하십시요.</inlineHelpText>
    <label>등급</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Chief</fullName>
            </value>
            <value>
                <fullName>Principal</fullName>
            </value>
            <value>
                <fullName>Supervisor</fullName>
                <default>true</default>
                <label>Supervisor</label>
            </value>
            <value>
                <fullName>특급</fullName>
            </value>
            <value>
                <fullName>고급</fullName>
            </value>
            <value>
                <fullName>중급</fullName>
            </value>
            <value>
                <fullName>초급</fullName>
            </value>
            <value>
                <fullName>Senior</fullName>
            </value>
            <value>
                <fullName>Intermediate</fullName>
            </value>
            <value>
                <fullName>Junior</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>