PA_Education/TestMenifest/force-app/main/default/objects/QuoteItem__c/fields/QuoteItem_ConsultListPrice__c.field-meta.xml
<CustomField>
    <fullName>QuoteItem_ConsultListPrice__c</fullName>
    <inlineHelpText>SFDC Consultant	Chief	   26,000,000 
SFDC Consultant	Principal	   22,000,000 
SFDC Consultant	Supervisor  16,000,000 
SFDC Developer	Chief	   22,000,000 
SFDC Developer	Principal	   16,000,000 
SFDC Developer	Supervisor  12,000,000</inlineHelpText>
    <label>표준단가 M/M</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>