PA_Education/TestMenifest/force-app/main/default/objects/QuoteItem__c/fields/QuoteItem_ConsultManMonths__c.field-meta.xml
<CustomField>
    <fullName>QuoteItem_ConsultManMonths__c</fullName>
    <label>투입 M/M</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>