PA_Education/TestMenifest/force-app/main/default/objects/QuoteItem__c/fields/QuoteItem_ConsultName__c.field-meta.xml
<CustomField>
    <fullName>QuoteItem_ConsultName__c</fullName>
    <defaultValue>&apos;TBD&apos;</defaultValue>
    <label>이름</label>
    <length>255</length>
    <type>Text</type>
</CustomField>