PA_Education/TestMenifest/force-app/main/default/objects/QuoteItem__c/fields/QuoteItem_ConsultRemark__c.field-meta.xml
<CustomField>
    <fullName>QuoteItem_ConsultRemark__c</fullName>
    <label>비고</label>
    <length>255</length>
    <type>Text</type>
</CustomField>