PA_Education/TestMenifest/force-app/main/default/objects/QuoteItem__c/fields/QuoteItem_ConsultType__c.field-meta.xml
<CustomField>
    <fullName>QuoteItem_ConsultType__c</fullName>
    <description>투입인력의 구분</description>
    <inlineHelpText>투입인력이 여러 역할을 담당한 경우 다중 선택하십시요.</inlineHelpText>
    <label>인력구분</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Business Leader</fullName>
            </value>
            <value>
                <fullName>Project Manager</fullName>
            </value>
            <value>
                <fullName>Project Leader</fullName>
            </value>
            <value>
                <fullName>Business Analyst</fullName>
            </value>
            <value>
                <fullName>SFDC Administrator</fullName>
            </value>
            <value>
                <fullName>SFDC Platform Developer</fullName>
            </value>
            <value>
                <fullName>SFDC Consultant</fullName>
            </value>
            <value>
                <fullName>SFDC Pardot Consultant</fullName>
            </value>
            <value>
                <fullName>SFDC Sales Cloud Consultant</fullName>
            </value>
            <value>
                <fullName>SFDC Service Cloud Consultant</fullName>
            </value>
            <value>
                <fullName>SFDC Marketing Cloud Consultant</fullName>
            </value>
            <value>
                <fullName>SFDC Field Service Lightning Consultant</fullName>
            </value>
            <value>
                <fullName>SFDC System Architect</fullName>
            </value>
            <value>
                <fullName>SFDC Technical Architect</fullName>
            </value>
            <value>
                <fullName>SFDC Application Architect</fullName>
            </value>
            <value>
                <fullName>I/F Specialist</fullName>
            </value>
            <value>
                <fullName>Migration Expert</fullName>
            </value>
            <value>
                <fullName>Front-end Developer</fullName>
            </value>
            <value>
                <fullName>Mobile Developer</fullName>
            </value>
            <value>
                <fullName>App Developer</fullName>
            </value>
            <value>
                <fullName>Web Publisher</fullName>
            </value>
            <value>
                <fullName>Web Designer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>