PA_Education/TestMenifest/force-app/main/default/objects/QuoteItem__c/fields/QuoteItem_Discount_Percent__c.field-meta.xml
<CustomField>
    <fullName>QuoteItem_Discount_Percent__c</fullName>
    <formula>( QuoteItem_ConsultListPrice__c- QuoteItem_ConsultDiscountedPrice__c) / QuoteItem_ConsultListPrice__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>할인율</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>