PA_Education/TestMenifest/force-app/main/default/objects/QuoteItem__c/fields/QuoteItem_DiscountPrice__c.field-meta.xml
<CustomField>
    <fullName>QuoteItem_DiscountPrice__c</fullName>
    <formula>CASE(RecordType.Name, &apos;컨설팅&apos;, QuoteItem_ConsultDiscountedPrice__c, &apos;라이센스&apos;, QuoteItem_LicenseDiscountedPrice__c, QuoteItem_TrainingDiscountAmount__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>할인금액</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>