PA_Education/TestMenifest/force-app/main/default/objects/QuoteItem__c/fields/QuoteItem_FOC__c.field-meta.xml
<CustomField>
    <fullName>QuoteItem_FOC__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>FOC일 경우 체크하세요.
이 경우 금액이 계산되지 않습니다.</inlineHelpText>
    <label>FOC</label>
    <type>Checkbox</type>
</CustomField>