PA_Education/TestMenifest/force-app/main/default/objects/QuoteItem__c/fields/QuoteItem_License_Percent__c.field-meta.xml
<CustomField>
    <fullName>QuoteItem_License_Percent__c</fullName>
    <description>할인율 License</description>
    <formula>( QuoteItem_LicenseListPrice__c - QuoteItem_LicenseDiscountedPrice__c ) / QuoteItem_LicenseListPrice__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>할인율</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>