PA_Education/TestMenifest/force-app/main/default/objects/QuoteItem__c/fields/QuoteItem_LicenseAmount__c.field-meta.xml
<CustomField>
    <fullName>QuoteItem_LicenseAmount__c</fullName>
    <formula>NULLVALUE(QuoteItem_LicenseDiscountedPriceYear__c, QuoteItem_LicenseListPriceYear__c) * QuoteItem_LicenseNumberOfUser__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>할인 후 금액(년)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>