PA_Education/TestMenifest/force-app/main/default/objects/QuoteItem__c/fields/QuoteItem_LicenseDiscountAmount__c.field-meta.xml
<CustomField>
    <fullName>QuoteItem_LicenseDiscountAmount__c</fullName>
    <formula>QuoteItem_LicenseListAmount__c - QuoteItem_LicenseAmount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>할인액(년)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>