PA_Education/TestMenifest/force-app/main/default/objects/QuoteItem__c/fields/QuoteItem_LicenseDiscountedPrice__c.field-meta.xml
<CustomField>
    <fullName>QuoteItem_LicenseDiscountedPrice__c</fullName>
    <label>할인사용료(월)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>