PA_Education/TestMenifest/force-app/main/default/objects/QuoteItem__c/fields/QuoteItem_LicenseDiscountedPriceYear__c.field-meta.xml
<CustomField>
    <fullName>QuoteItem_LicenseDiscountedPriceYear__c</fullName>
    <formula>IF(QuoteItem_LicenseDiscountedPrice__c==0, QuoteItem_LicenseListPrice__c ,QuoteItem_LicenseDiscountedPrice__c) * 12</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>사용료(년)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>