PA_Education/TestMenifest/force-app/main/default/objects/QuoteItem__c/fields/QuoteItem_LicenseListAmount__c.field-meta.xml
<CustomField>
    <fullName>QuoteItem_LicenseListAmount__c</fullName>
    <formula>QuoteItem_LicenseListPriceYear__c * QuoteItem_LicenseNumberOfUser__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>표준금액(년)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>