PA_Education/TestMenifest/force-app/main/default/objects/QuoteItem__c/fields/QuoteItem_LicenseListPriceYear__c.field-meta.xml
<CustomField>
    <fullName>QuoteItem_LicenseListPriceYear__c</fullName>
    <formula>QuoteItem_LicenseListPrice__c * 12</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>표준사용료(년)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>