PA_Education/TestMenifest/force-app/main/default/objects/QuoteItem__c/fields/QuoteItem_LicenseNumberOfUser__c.field-meta.xml
<CustomField>
    <fullName>QuoteItem_LicenseNumberOfUser__c</fullName>
    <label>사용자</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>