PA_Education/TestMenifest/force-app/main/default/objects/QuoteItem__c/fields/QuoteItem_LicenseType__c.field-meta.xml
<CustomField>
    <fullName>QuoteItem_LicenseType__c</fullName>
    <label>라이선스 구분</label>
    <length>255</length>
    <type>Text</type>
</CustomField>