PA_Education/TestMenifest/force-app/main/default/objects/QuoteItem__c/fields/QuoteItem_ListPriceFormula__c.field-meta.xml
<CustomField>
    <fullName>QuoteItem_ListPriceFormula__c</fullName>
    <formula>CASE(RecordType.Name, &apos;컨설팅&apos;, QuoteItem_ConsultListAmount__c, &apos;라이센스&apos;, QuoteItem_LicenseListAmount__c, QuoteItem_TrainingListAmount__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>표준금액</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>