PA_Education/TestMenifest/force-app/main/default/objects/QuoteItem__c/fields/QuoteItem_Quote__c.field-meta.xml
<CustomField>
    <fullName>QuoteItem_Quote__c</fullName>
    <description>견적 마스터</description>
    <label>견적</label>
    <referenceTo>Quote__c</referenceTo>
    <relationshipLabel>견적 상세</relationshipLabel>
    <relationshipName>QuoteItem</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>