PA_Education/TestMenifest/force-app/main/default/objects/QuoteItem__c/fields/QuoteItem_SortOrder__c.field-meta.xml
<CustomField>
    <fullName>QuoteItem_SortOrder__c</fullName>
    <inlineHelpText>구분,등급,단가 순서보다 우선 적용되는 표기 순번입니다.</inlineHelpText>
    <label>순서</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>