PA_Education/TestMenifest/force-app/main/default/objects/QuoteItem__c/fields/QuoteItem_Training_Percent__c.field-meta.xml
<CustomField>
    <fullName>QuoteItem_Training_Percent__c</fullName>
    <description>할인율 Training</description>
    <formula>( QuoteItem_TrainingStandardPrice__c - QuoteItem_TrainingSalesPrice__c ) / QuoteItem_TrainingStandardPrice__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>할인율</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>