PA_Education/TestMenifest/force-app/main/default/objects/QuoteItem__c/fields/QuoteItem_TrainingCount__c.field-meta.xml
<CustomField>
    <fullName>QuoteItem_TrainingCount__c</fullName>
    <label>수강인원</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>