PA_Education/TestMenifest/force-app/main/default/objects/QuoteItem__c/fields/QuoteItem_TrainingDescription__c.field-meta.xml
<CustomField>
    <fullName>QuoteItem_TrainingDescription__c</fullName>
    <label>상세항목</label>
    <length>80</length>
    <type>Text</type>
</CustomField>