PA_Education/TestMenifest/force-app/main/default/objects/QuoteItem__c/fields/QuoteItem_TrainingDiscountAmount__c.field-meta.xml
<CustomField>
    <fullName>QuoteItem_TrainingDiscountAmount__c</fullName>
    <formula>QuoteItem_TrainingListAmount__c -  QuoteItem_TrainingSalesAmount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>할인액</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>