PA_Education/TestMenifest/force-app/main/default/objects/QuoteItem__c/fields/QuoteItem_TrainingListAmount__c.field-meta.xml
<CustomField>
    <fullName>QuoteItem_TrainingListAmount__c</fullName>
    <formula>QuoteItem_TrainingCount__c *  QuoteItem_TrainingStandardPrice__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>표준금액</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>