PA_Education/TestMenifest/force-app/main/default/objects/QuoteItem__c/fields/QuoteItem_TrainingRemark__c.field-meta.xml
<CustomField>
    <fullName>QuoteItem_TrainingRemark__c</fullName>
    <label>비고</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>