PA_Education/TestMenifest/force-app/main/default/objects/QuoteItem__c/fields/QuoteItem_TrainingSalesAmount__c.field-meta.xml
<CustomField>
    <fullName>QuoteItem_TrainingSalesAmount__c</fullName>
    <formula>QuoteItem_TrainingSalesPrice__c *  QuoteItem_TrainingCount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>할인 후 수강료</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>