PA_Education/TestMenifest/force-app/main/default/objects/QuoteItem__c/fields/QuoteItem_TrainingStandardPrice__c.field-meta.xml
<CustomField>
    <fullName>QuoteItem_TrainingStandardPrice__c</fullName>
    <label>표준수강료</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>