PA_Education/TestMenifest/force-app/main/default/objects/QuoteItem__c/fields/QuoteItem_UnitFormula__c.field-meta.xml
<CustomField>
    <fullName>QuoteItem_UnitFormula__c</fullName>
    <formula>CASE(RecordType.Name , &apos;컨설팅&apos;, TEXT(QuoteItem_ConsultManMonths__c) &amp; &apos; M/M&apos;,
                       &apos;라이센스&apos;, TEXT(QuoteItem_LicenseNumberOfUser__c) &amp;&apos; Users&apos;,
TEXT(QuoteItem_TrainingCount__c) &amp;&apos; Users&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>단위</label>
    <type>Text</type>
</CustomField>