PA_Education/TestMenifest/force-app/main/default/objects/QuoteItem__c/recordTypes/Consulting.recordType-meta.xml
<RecordType>
    <fullName>Consulting</fullName>
    <active>true</active>
    <description>투입인력에 대한 상세 내역</description>
    <label>컨설팅</label>
</RecordType>