PA_Education/TestMenifest/force-app/main/default/objects/QuoteItem__c/recordTypes/License.recordType-meta.xml
<RecordType>
    <fullName>License</fullName>
    <active>true</active>
    <description>견적을 구성하는 라이센스 내역</description>
    <label>라이센스</label>
</RecordType>