PA_Education/TestMenifest/force-app/main/default/objects/QuoteItem__c/recordTypes/Training.recordType-meta.xml
<RecordType>
    <fullName>Training</fullName>
    <active>true</active>
    <description>교육 견적 상세 내역</description>
    <label>교육</label>
</RecordType>