PA_Education/TestMenifest/force-app/main/default/objects/QuoteItem__c/validationRules/Item_Add_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Item_Add_Rule</fullName>
    <active>true</active>
    <description>초안 반려일때만 추가 가능</description>
    <errorConditionFormula>ISPICKVAL( QuoteItem_Quote__r.Quote_Status__c , &apos;Approved&apos;)
|| ISPICKVAL( QuoteItem_Quote__r.Quote_Status__c , &apos;Pending&apos;)</errorConditionFormula>
    <errorMessage>승인 진행 또는 완료된 견적은 수정 할 수 없습니다.</errorMessage>
</ValidationRule>